--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@hapi/hapi": "^20.1.0",
     "@hapi/inert": "^6.0.3",
-    "@hapi/joi": "^17.1.1",
     "@hapi/vision": "^6.0.1",
-    "handlebars": "^4.7.6"
+    "dotenv": "^8.2.0",
+    "handlebars": "^4.7.6",
+    "joi": "^17.3.0",
+    "mongoose": "^5.11.13"
   }
 }
