--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hapi/hapi": "^20.1.0",
     "@hapi/inert": "^6.0.3",
     "@hapi/vision": "^6.0.1",
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "handlebars": "^4.7.6",
     "joi": "^17.3.0",
