--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hapi/inert": "^6.0.3",
     "@hapi/vision": "^6.0.1",
     "bcrypt": "^5.0.0",
+    "boom": "^7.3.0",
     "dotenv": "^8.2.0",
     "handlebars": "^4.7.6",
     "joi": "^17.3.0",
